--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-anime": "^4.0.4",
     "react-dom": "^17.0.2",
+    "react-entypo": "^1.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "theme-ui": "^0.6.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
