--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.13.15",
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
+    "babel-loader": "^8.2.2",
+    "custom-cursor-react": "^1.0.5",
+    "gsap": "^3.6.1",
+    "react": "^16.14.0",
     "react-anime": "^4.0.4",
     "react-dom": "^17.0.2",
     "react-entypo": "^1.3.0",
